# metaAIHackathon

./: KNOWLEDGE.md  PLAN.md  ProblemDetails  README.md  app.py  client.py  dataset.json  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  studymaterialLinks  tasks.py
server/: Dockerfile  reward.py
